@@ -1,5 +1,5 @@
 # Makefile.am - src/ directory Makefile for miredo
-# $Id: Makefile.am,v 1.6 2004/07/31 19:58:43 rdenisc Exp $
+# $Id: Makefile.am,v 1.7 2004/08/26 08:02:22 rdenisc Exp $
 
 # ***********************************************************************
 # *  Copyright (C) 2004 Remi Denis-Courmont.                            *
@@ -34,5 +34,5 @@ sbin_PROGRAMS = miredo
 # miredo
 miredo_SOURCES = main.c miredo.cpp miredo.h privproc.cpp privproc.h \
 		relay.cpp relay.h server.cpp server.h
-miredo_LDADD = ../libtun6/libtun6.a ../libteredo/libteredo.a
+miredo_LDADD = ../libtun6/libtun6.a ../libteredo/libteredo.a @OPENSSL_LIBS@
 
